--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -7,14 +7,14 @@ import Container from "../components/Container.astro";
 <Layout>
   <Container>
     <div
-      class="p-4 md:p-[40px] lg:p-[80px] min-h-[790px] max-w-[1250px] mx-auto bg-white rounded-[40px] lg:rounded-[52px] w-full"
+      class="p-2 md:p-[40px] lg:p-[80px] min-h-[790px] max-w-[1250px] mx-auto bg-white rounded-[32px] lg:rounded-[52px] w-full"
     >
       <div class="lg:flex lg:space-x-5 lg:mb-5 lg:h-[60%]">
         <a
           transition:name="about"
           href="/about-me"
           title="About Rafael Meza"
-          class="lg:w-[60%] h-[330px] lg:h-auto w-full bg-purple rounded-[24px] flex justify-center items-center"
+          class="mb-2 lg:mb-0 lg:w-[60%] h-[330px] lg:h-auto w-full bg-purple rounded-[24px] flex justify-center items-center"
         >
           <div class="flex items-center space-x-5 p-4">
             <Icon
@@ -34,7 +34,7 @@ import Container from "../components/Container.astro";
           transition:name="projects"
           href="/projects"
           title="Projects"
-          class="lg:w-[40%] block h-[330px] lg:h-auto w-full bg-orange rounded-[24px] relative overflow-hidden p-9"
+          class="mb-2 lg:mb-0 lg:w-[40%] block h-[330px] lg:h-auto w-full bg-orange rounded-[24px] relative overflow-hidden p-9"
         >
           <Icon
             name="material-symbols-light:award-star-rounded"
@@ -54,7 +54,7 @@ import Container from "../components/Container.astro";
         <a
           href="/contact"
           title="Get in Touch"
-          class="block lg:w-[30%] h-[330px] lg:h-auto bg-pink rounded-[24px] overflow-hidden relative"
+          class="mb-2 lg:mb-0 block lg:w-[30%] h-[330px] lg:h-auto bg-pink rounded-[24px] overflow-hidden relative"
         >
           <Icon
             name="material-symbols-light:cloud"
@@ -75,7 +75,7 @@ import Container from "../components/Container.astro";
         <a
           href="/hobbies-interests"
           transition:name="hobbies-interests"
-          class="lg:w-[70%] min-h-[430px] sm:min-h-[360px] md:min-h-[300px] lg:min-h-0 bg-light-gray rounded-[24px] overflow-hidden relative block"
+          class="mb-2 lg:mb-0 lg:w-[70%] min-h-[430px] sm:min-h-[360px] md:min-h-[300px] lg:min-h-0 bg-light-gray rounded-[24px] overflow-hidden relative block"
           title="Hobbies & Interests"
         >
           <Icon
