--- a/src/pages/hobbies-interests.astro
+++ b/src/pages/hobbies-interests.astro
@@ -34,7 +34,8 @@ const images = [
     >
       <a
         href="/"
-        class="w-[62px] flex items-center justify-center h-[62px] absolute rounded-full top-[30px] z-20 right-[30px] bg-purple"
+        id="close-button-js"
+        class="opacity-0 translate-y-2 transition duration-700 w-[62px] flex items-center justify-center h-[62px] absolute rounded-full top-[30px] z-20 right-[30px] bg-purple"
       >
         <Icon
           name="material-symbols-light:arrow-insert-rounded"
@@ -73,5 +74,11 @@ const images = [
     if (slides.length > 0) {
       setInterval(showNextSlide, 1200, slides);
     }
+  });
+
+  document.addEventListener("astro:page-load", () => {
+    const closeButton = document.getElementById("close-button-js");
+    const classes = ["!opacity-100", "!translate-y-0"];
+    setTimeout(() => closeButton.classList.add(...classes), 300);
   });
 </script>
