fix: check element before using them
- Also, add keydown event for ESC

--- a/src/pages/about-me.astro
+++ b/src/pages/about-me.astro
@@ -41,9 +41,17 @@ import Container from "../components/Container.astro";
 </Layout>
 
 <script is:inline>
+  document.addEventListener("keydown", function (event) {
+    if (event.key === "Escape") {
+      window.location.href = "/";
+    }
+  });
+
   document.addEventListener("astro:page-load", () => {
     const closeButton = document.getElementById("close-button-js");
-    const classes = ["!opacity-100", "!translate-y-0"];
-    setTimeout(() => closeButton.classList.add(...classes), 300);
+    if (closeButton) {
+      const classes = ["!opacity-100", "!translate-y-0"];
+      setTimeout(() => closeButton.classList.add(...classes), 300);
+    }
   });
 </script>
