--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -119,12 +119,22 @@ import Container from "../components/Container.astro";
 </Layout>
 
 <script is:inline>
+  document.addEventListener("keydown", function (event) {
+    if (event.key === "Escape") {
+      window.location.href = "/";
+    }
+  });
+
   document.addEventListener("astro:page-load", () => {
     const closeButton = document.getElementById("close-button-js");
+    if (!closeButton) return;
+
     const classes = ["!opacity-100", "!translate-y-0"];
-    setTimeout(() => closeButton.classList.add(...classes), 1350);
+    setTimeout(() => closeButton.classList.add(...classes), 1300);
 
     const boxes = document.querySelectorAll(".box-js");
+    if (!boxes.length === 0) return;
+
     boxes.forEach((box, index) => {
       setTimeout(() => {
         box.classList.add(...classes);
