feat: upate color text

--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -38,7 +38,7 @@ import Container from "../components/Container.astro";
               RAFAEL MEZA
             </h1>
           </div>
-          <p class="font-lobster text-3xl text-orange">Available for work</p>
+          <p class="text-green-600">Available for work</p>
         </div>
         <div
           class="grid gap-4 w-full"
