--- a/src/pages/about-me.astro
+++ b/src/pages/about-me.astro
@@ -41,7 +41,7 @@ import Container from "../components/Container.astro";
 </Layout>
 
 <script is:inline>
-  document.addEventListener("keydown", function (event) {
+  document.addEventListener("keyup", function (event) {
     if (event.key === "Escape") {
       const closeButton = document.getElementById("close-button-js");
       if (closeButton) {
