feat: add animation when projects loads

--- a/src/pages/about-me.astro
+++ b/src/pages/about-me.astro
@@ -21,7 +21,10 @@ import Container from "../components/Container.astro";
           class="-rotate-45"
         />
       </a>
-      <div>
+      <div
+        id="logo-js"
+        class="opacity-0 translate-y-4 transition-all duration-700"
+      >
         <div class="flex items-center mb-6 space-x-5">
           <Icon
             name="material-symbols-light:award-star-rounded"
@@ -50,11 +53,22 @@ import Container from "../components/Container.astro";
     }
   });
 
+  document.addEventListener("keyup", function (event) {
+    if (event.key === "Escape") {
+      window.location.href = "/";
+    }
+  });
+
   document.addEventListener("astro:page-load", () => {
     const closeButton = document.getElementById("close-button-js");
     if (closeButton) {
       const classes = ["!opacity-100", "!translate-y-0"];
       setTimeout(() => closeButton.classList.add(...classes), 300);
     }
+
+    const sliderContainer = document.getElementById("logo-js");
+    if (!sliderContainer) return;
+    const classes = ["!translate-y-0", "!opacity-100"];
+    sliderContainer.classList.add(...classes);
   });
 </script>
