--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -32,40 +32,50 @@ const images = [
       transition:name="projects"
       class="w-full max-w-[1250px] bg-orange mx-auto rounded-[32px] lg:rounded-[52px] flex relative"
     >
-      <a
-        href="/"
-        id="close-button-js"
-        class="w-[62px] transition duration-700 opacity-0 translate-y-4 flex items-center justify-center h-[62px] absolute rounded-full top-[30px] z-20 right-[30px] bg-purple"
+      <div
+        class="relative opacity-0 transition-all translate-y-4 ease-in-out duration-700 flex w-full"
+        id="slider-container-js"
       >
-        <Icon
-          name="material-symbols-light:arrow-insert-rounded"
-          size="62"
-          class="text-orange -rotate-90"
-        />
-      </a>
-      {
-        images.map((image, index) => {
-          return (
-            <Image
-              src={image}
-              class={`${index === 0 ? "!opacity-100" : ""}  slide-js opacity-0 transition-opacity ease-in-out duration-1000 absolute left-1/2 -translate-x-1/2 -translate-y-1/2 top-1/2 object-contain w-[95%] h-[95%]`}
-              alt="Rafael Meza | Portfolio"
-            />
-          );
-        })
-      }
+        <a
+          href="/"
+          id="close-button-js"
+          class="w-[62px] transition duration-700 opacity-0 translate-y-4 flex items-center justify-center h-[62px] absolute rounded-full top-[30px] z-20 right-[30px] bg-purple"
+        >
+          <Icon
+            name="material-symbols-light:arrow-insert-rounded"
+            size="62"
+            class="text-orange -rotate-90"
+          />
+        </a>
+        {
+          images.map((image, index) => {
+            return (
+              <Image
+                src={image}
+                class={`${index === 0 ? "!opacity-100" : ""}  slide-js opacity-0 transition-opacity ease-in-out duration-1000 absolute left-1/2 -translate-x-1/2 -translate-y-1/2 top-1/2 object-contain w-[95%] h-[95%]`}
+                alt="Rafael Meza | Portfolio"
+              />
+            );
+          })
+        }
+      </div>
     </div>
   </Container>
 </Layout>
 
 <script is:inline>
-  document.addEventListener("keydown", function (event) {
+  document.addEventListener("keyup", function (event) {
     if (event.key === "Escape") {
       window.location.href = "/";
     }
   });
 
   document.addEventListener("astro:page-load", () => {
+    const sliderContainer = document.getElementById("slider-container-js");
+    if (!sliderContainer) return;
+    const classes = ["!translate-y-0", "!opacity-100"];
+    sliderContainer.classList.add(...classes);
+
     let currentSlide = 0;
 
     const showNextSlide = (slides) => {
