--- a/src/pages/contact.astro
+++ b/src/pages/contact.astro
@@ -119,7 +119,7 @@ import Container from "../components/Container.astro";
 </Layout>
 
 <script is:inline>
-  document.addEventListener("keydown", function (event) {
+  document.addEventListener("keyup", function (event) {
     if (event.key === "Escape") {
       window.location.href = "/";
     }
