--- a/src/pages/hobbies-interests.astro
+++ b/src/pages/hobbies-interests.astro
@@ -59,7 +59,7 @@ const images = [
 </Layout>
 
 <script is:inline>
-  document.addEventListener("keydown", function (event) {
+  document.addEventListener("keyup", function (event) {
     if (event.key === "Escape") {
       window.location.href = "/";
     }
